# anmosys26

./: flake.nix  index.md
docs/: Ascension_Report.md  Fabric_Report.md
genesis-oracle/: pyproject.toml
genesis-oracle/data/: datastream.npy
genesis-oracle/src/: architecture.py  architecture_conv.py  data_generator.py  fabric_pinn.py  flax_core.py  jax_gradient.py  jax_swarm.py  legacy_swarm.py  oracle_setup.py  pinn_data.py  train_oracle.py
