[project]
name = "genesis-oracle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flax>=0.12.7",
    "jax>=0.10.0",
    "jaxlib>=0.10.0",
    "keras>=3.0.7",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "optax>=0.2.8",
    "plotly>=6.7.0",
    "scipy>=1.17.1",
]
